# wiki-based-doc-classifier

./: .gitignore  README.md  pyproject.toml
examples/: example_usage.py
wiki_based_doc_classifier/classifiers/: TfidfClassifier.py  __init__.py
wiki_based_doc_classifier/corpus/: WikipediaCorpus.py  __init__.py
wiki_based_doc_classifier/model_selection/: ParamSearch.py  __init__.py
